no blurry lettuce, addign function back in to fix unit test

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -107,14 +107,7 @@ html, body {
     left: 5px;
     height: 50px;
     width: 50px;
-    -webkit-filter: blur(1px);
-    filter: blur(1px);
-
-    &:hover {
-        -webkit-filter: blur();
-        filter: blur();
-        cursor: pointer;
-    }
+    cursor: pointer;
 }
 
 .search-page {
